Solve swagger.yaml Problem
